Tutorial-Start_to_Finish-BSSNCurvilinear: Continue work on ID part

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
@@ -54,11 +54,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step P0: Load needed modules\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
     "import grid as gri\n",
     "from outputC import *\n",
+    "import reference_metric as rfm\n",
+    "import BSSN.BSSN_RHSs\n",
+    "\n",
+    "# Step P1: Set up reference metric\n",
+    "# Step P1a: Choose SinhSpherical coordinates\n",
+    "CoordSystem = \"SinhSpherical\"\n",
+    "par.set_parval_from_str(\"reference_metric::CoordSystem\",CoordSystem)\n",
+    "# Step P1b: Set up needed reference metric quantities\n",
+    "rfm.reference_metric()\n",
     "\n",
     "thismodule = \"Brill-Lindquist\"\n",
     "BH1_posn_x,BH1_posn_y,BH1_posn_z = par.Cparameters(\"REAL\", thismodule, [\"BH1_posn_x\",\"BH1_posn_y\",\"BH1_posn_z\"])\n",
@@ -66,21 +76,210 @@
     "BH2_posn_x,BH2_posn_y,BH2_posn_z = par.Cparameters(\"REAL\", thismodule, [\"BH2_posn_x\",\"BH2_posn_y\",\"BH2_posn_z\"])\n",
     "BH2_mass = par.Cparameters(\"REAL\", thismodule, [\"BH2_mass\"])\n",
     "\n",
-    "# Step 2b: Set spatial dimension (must be 3 for BSSN)\n",
+    "# Step 0: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
-    "x,y,z = par.Cparameters(\"REAL\",thismodule,[\"x\",\"y\",\"z\"])\n",
+    "#x = rfm.xxCart[0]\n",
+    "#y = rfm.xxCart[1]\n",
+    "#z = rfm.xxCart[2]\n",
     "\n",
+    "Cartxyz = ixp.declarerank1(\"Cartxyz\")\n",
+    "\n",
+    "# Step 1: Set psi, the conformal factor:\n",
     "psi = sp.sympify(1)\n",
-    "psi += BH1_mass / ( 2 * sp.sqrt((x-BH1_posn_x)**2 + (y-BH1_posn_y)**2 + (z-BH1_posn_z)**2) )\n",
-    "psi += BH2_mass / ( 2 * sp.sqrt((x-BH2_posn_x)**2 + (y-BH2_posn_y)**2 + (z-BH2_posn_z)**2) )\n",
+    "psi += BH1_mass / ( 2 * sp.sqrt((Cartxyz[0]-BH1_posn_x)**2 + (Cartxyz[1]-BH1_posn_y)**2 + (Cartxyz[2]-BH1_posn_z)**2) )\n",
+    "psi += BH2_mass / ( 2 * sp.sqrt((Cartxyz[0]-BH2_posn_x)**2 + (Cartxyz[1]-BH2_posn_y)**2 + (Cartxyz[2]-BH2_posn_z)**2) )\n",
     "\n",
+    "# Step 2: Set all needed ADM variables in Cartesian coordinates\n",
     "gammaCartDD = ixp.zerorank2()\n",
     "KCartDD     = ixp.zerorank2() # K_{ij} = 0 for these initial data\n",
     "for i in range(DIM):\n",
-    "    gammaCartDD[i][i] = psi**4\n"
+    "    gammaCartDD[i][i] = psi**4\n",
+    "\n",
+    "alpha = 1/psi**2\n",
+    "betaCartU = ixp.zerorank1() # We generally choose \\beta^i = 0 for these initial data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we convert these ADM variables \n",
+    "\n",
+    "$$\\left\\{\\gamma_{ij}, K_{ij}, \\alpha, \\beta^i\\right\\}$$\n",
+    "\n",
+    "to the BSSN variables\n",
+    "\n",
+    "$$\\left\\{\\bar{\\gamma}_{i j},\\bar{A}_{i j},\\phi, K, \\bar{\\Lambda}^{i}, \\alpha, \\beta^i, B^i\\right\\},$$ \n",
+    "\n",
+    "to the rescaled variables \n",
+    "\n",
+    "$$\\left\\{h_{i j},a_{i j},\\phi, K, \\lambda^{i}, \\alpha, \\mathcal{V}^i, \\mathcal{B}^i\\right\\},$$ \n",
+    "\n",
+    "in this case assuming that all components of the initial shift and its time derivative are zero: $\\beta^i=\\mathcal{V}^i=\\mathcal{B}^i=0$.\n",
+    "\n",
+    "First we have (Eqs. 1 and 2 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
+    "$$\n",
+    "\\bar{\\gamma}_{i j} = \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{1/3} \\gamma_{ij}.\n",
+    "$$\n",
+    "Brill-Linquist initial data are conformally flat, meaning that $\\bar{\\gamma}=\\hat{\\gamma}=1$ in Cartesian coordinates. So for these initial data in Cartesian coordinates we have\n",
+    "$$\n",
+    "\\bar{\\gamma}_{i j} = \\gamma^{1/3} \\gamma_{ij}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3a: Convert ADM $\\gamma_{ij}$ to BSSN $\\bar{\\gamma}_{ij}$\n",
+    "gammaCartUU, gammaCartDET = ixp.symm_matrix_inverter3x3(gammaCartDD)\n",
+    "gammaCartbarDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        gammaCartbarDD[i][j] = gammaCartDET**(sp.Rational(1,3))*gammaCartDD[i][j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Second, we convert $K_{ij}$ to $\\bar{A}_{ij}$ and $K$, where (Eq. 3 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
+    "\n",
+    "\\begin{align}\n",
+    "K &= \\gamma^{ij} K_{ij} \\\\\n",
+    "\\bar{A}_{ij} &= \\left(\\frac{\\gamma}{\\bar{\\gamma}}\\right)^{1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\\\\\n",
+    "&= \\gamma^{1/3} \\left(K_{ij} - \\frac{1}{3} \\gamma_{ij} K \\right)\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3b: Convert ADM $K_{ij}$ to $\\bar{A}_{ij}$ and $K$, \n",
+    "#          where (Eq. 3 of Baumgarte et al.: https://arxiv.org/pdf/1211.6632.pdf)\n",
+    "KCart = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        KCart += gammaCartUU[i][j]*KCartDD[i][j]\n",
+    "\n",
+    "ACartbarDD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        ACartbarDD[i][j] = gammaCartDET**(sp.Rational(1,3))*(KCartDD[i][j] - sp.Rational(1,3)*gammaCartDD[i][j]*KCart)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Third, we define $\\bar{\\Lambda}^i$ (Eqs. 4 and 5 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf)):\n",
+    "\n",
+    "$$\n",
+    "\\bar{\\Lambda}^i = \\bar{\\gamma}^{jk}\\left(\\bar{\\Gamma}^i_{jk} - \\hat{\\Gamma}^i_{jk}\\right).\n",
+    "$$\n",
+    "\n",
+    "In Cartesian coordinates, $\\hat{\\Gamma}^i_{jk}=0$, so we get in Cartesian coordinates\n",
+    "\\begin{align}\n",
+    "\\bar{\\Lambda}^i &= \\bar{\\gamma}^{jk} \\bar{\\Gamma}^i_{jk} \\\\\n",
+    "&= \\bar{\\gamma}^{jk} \\frac{1}{2} \\bar{\\gamma}^{il} \\left(\n",
+    "\\bar{\\gamma}_{lj,k} + \\bar{\\gamma}_{lk,j} - \\bar{\\gamma}_{jk,l} \\right)\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Step 3c: Define $\\bar{\\Lambda}^i$ from Eqs. 4 and 5 of Baumgarte et al.: https://arxiv.org/pdf/1211.6632.pdf\n",
+    "LambdaCartU = ixp.zerorank1()\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            for l in range(DIM):\n",
+    "                LambdaCartU[i] += sp.Rational(1,2)*gammaCartUU[j][k]*gammaCartUU[i][l]* \\\n",
+    "                                    ( sp.diff(gammaCartUU[l][j],Cartxyz[k]) + \n",
+    "                                      sp.diff(gammaCartUU[l][k],Cartxyz[j]) -\n",
+    "                                      sp.diff(gammaCartUU[j][k],Cartxyz[l]) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All BSSN tensors and vectors are in Cartesian coordinates $x^i_{\\rm Cart} = (x,y,z)$, but we need them in the curvilinear coordinate system $x^i_{\\rm rfm}= ({\\rm xx0},{\\rm xx1},{\\rm xx2})$ set by the \"reference_metric::CoordSystem\" variable. Empirically speaking, it is far easier to write $(x({\\rm xx0},{\\rm xx1},{\\rm xx2}),y({\\rm xx0},{\\rm xx1},{\\rm xx2}),z({\\rm xx0},{\\rm xx1},{\\rm xx2}))$ than the inverse, so we will compute the Jacobian matrix\n",
+    "\n",
+    "$$\n",
+    "{\\rm Jac\\_dUCart\\_dDrfmUD[i][j]} = \\frac{\\partial x^i_{\\rm Cart}}{\\partial x^j_{\\rm rfm}},\n",
+    "$$\n",
+    "\n",
+    "via exact differentiation (courtesy SymPy), and the inverse Jacobian\n",
+    "$$\n",
+    "{\\rm Jac\\_dUrfm\\_dDCartUD[i][j]} = \\frac{\\partial x^i_{\\rm rfm}}{\\partial x^j_{\\rm Cart}},\n",
+    "$$\n",
+    "\n",
+    "using NRPy+'s ${\\rm generic\\_matrix\\_inverter3x3()}$ function. In terms of these, we have\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\bar{\\gamma}^{\\rm rfm}_{ij} &= \n",
+    "\\frac{\\partial x^\\ell_{\\rm Cart}}{\\partial x^i_{\\rm rfm}}\n",
+    "\\frac{\\partial x^m_{\\rm Cart}}{\\partial x^j_{\\rm rfm}} \\bar{\\gamma}^{\\rm Cart}_{\\ell m}\\\\\n",
+    "\\bar{A}^{\\rm rfm}_{ij} &= \n",
+    "\\frac{\\partial x^\\ell_{\\rm Cart}}{\\partial x^i_{\\rm rfm}}\n",
+    "\\frac{\\partial x^m_{\\rm Cart}}{\\partial x^j_{\\rm rfm}} \\bar{A}^{\\rm Cart}_{\\ell m}\\\\\n",
+    "\\bar{\\Lambda}^i_{\\rm rfm} &= \\frac{\\partial x^i_{\\rm rfm}}{\\partial x^\\ell_{\\rm Cart}} \\bar{\\Lambda}^\\ell_{\\rm Cart} \\\\\n",
+    "\\beta^i_{\\rm rfm} &= \\frac{\\partial x^i_{\\rm rfm}}{\\partial x^\\ell_{\\rm Cart}} \\beta^\\ell_{\\rm Cart}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: Convert BSSN tensors to basis set by CoordSystem variable above.\n",
+    "Jac_dUCart_dDrfmUD = ixp.zerorank2()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Jac_dUCart_dDrfmUD[i][j] = sp.diff(rfm.xxCart[i],rfm.xx[j])\n",
+    "\n",
+    "Jac_dUrfm_dDCartUD, dummyDET = ixp.generic_matrix_inverter3x3(Jac_dUCart_dDrfmUD)\n",
+    "\n",
+    "gammabarDD = ixp.zerorank2()\n",
+    "AbarDD     = ixp.zerorank2()\n",
+    "betaU   = ixp.zerorank1()\n",
+    "LambdaU = ixp.zerorank1()\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        betaU[i]   += Jac_dUrfm_dDCartUD[i][j]*betaCartU[j]\n",
+    "        LambdaU[i] += Jac_dUrfm_dDCartUD[i][j]*LambdaCartU[j]\n",
+    "        for k in range(3):\n",
+    "            for l in range(3):\n",
+    "                gammabarDD[i][j] += Jac_dUrfm_dDCartUD[k][i]*Jac_dUrfm_dDCartUD[l][j]*gammaCartbarDD[k][l]\n",
+    "                AbarDD[i][j]     += Jac_dUrfm_dDCartUD[k][i]*Jac_dUrfm_dDCartUD[l][j]*ACartbarDD[k][l]\n",
+    "\n",
+    "# cfCart = sp.sympify\n",
+    "# if par.parval_from_str(\"BSSN_RHSs::ConformalFactor\") == \"phi\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
