Tutorial-BSSNConstraints: Code up most of the terms in the Hamiltonian

--- a/Tutorial-BSSNConstraints.ipynb
+++ b/Tutorial-BSSNConstraints.ipynb
@@ -24,6 +24,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "import NRPy_param_funcs as par\n",
+    "import indexedexp as ixp\n",
+    "import grid as gri\n",
+    "\n",
+    "import BSSN.BSSN_RHSs as bssnrhs\n",
+    "bssnrhs.BSSN_RHSs()\n",
+    "\n",
+    "# Step 2: Set spatial dimension (must be 3 for BSSN)\n",
+    "DIM = 3\n",
+    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
+    "\n",
+    "bssnrhs.exp_m4phi\n",
+    "\n",
+    "RbarUU = ixp.zerorank2()\n",
+    "\n",
+    "Rbartrace = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Rbartrace += bssnrhs.gammabarUU[i][j]*bssnrhs.RbarDD[i][j]\n",
+    "        \n",
+    "        \n",
+    "phi_dBar_times_phi_dBar = sp.sympify(0)\n",
+    "phi_dBarDD_contraction = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        phi_dBar_times_phi_dBar += bssnrhs.gammabarUU[i][j]*bssnrhs.phi_dBarD[i]*bssnrhs.phi_dBarD[j]\n",
+    "        phi_dBarDD_contraction  += bssnrhs.gammabarUU[i][j]*bssnrhs.phi_dBarDD[i][j]\n",
+    "        \n",
+    "H = sp.sympify(0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
