Tutorial-BSSNConstraints: H output

--- a/Tutorial-BSSNConstraints.ipynb
+++ b/Tutorial-BSSNConstraints.ipynb
@@ -8,18 +8,9 @@
     "\n",
     "## Python module containing the final expressions: [BSSN/BSSN_Constraints.py](../edit/BSSN/BSSN_Constraints.py)\n",
     "\n",
-    "### ***Citations***: Generic curvilinear coordinate reference metric approach matches that of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658), which is an extension of the spherical coordinate reference metric approach of [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632), which builds upon the covariant \"Lagrangian\" BSSN formalism of [Brown (2009)](https://arxiv.org/abs/0902.3652). *See also citations within each article.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Eqs. 13 and 14 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf):\n",
-    "\\begin{align}\n",
-    "H &= \\frac{2}{3} K^2 - \\bar{A}_{ij} \\bar{A}^{ij} + e^{-4\\phi} \\left(\\bar{R} - 8 \\bar{D}^i \\phi \\bar{D}_i \\phi - 8 \\bar{D}^2 \\phi\\right) \\\\\n",
-    "\\mathcal{M}^i &= e^{-4\\phi} \\left(\\frac{1}{\\bar{\\gamma}} \\hat{D}_j\\left(\\sqrt{\\bar{\\gamma}}\\bar{A^{ij}}\\right) + 6 \\bar{A}^{ij}\\partial_j \\phi - \\frac{2}{3} \\bar{\\gamma}^{ij}\\partial_j K + \\bar{A}^{jk} \\Delta\\Gamma^i_{jk}\\right)\n",
-    "\\end{align} "
+    "### ***Citations***: Generic curvilinear coordinate reference metric approach matches that of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658), which is an extension of the spherical coordinate reference metric approach of [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632), which builds upon the covariant \"Lagrangian\" BSSN formalism of [Brown (2009)](https://arxiv.org/abs/0902.3652). *See also citations within each article.*\n",
+    "\n",
+    "We start by loading the needed modules. Notably, this module depends on several quantities defined in the [BSSN/BSSN_RHSs.py](../edit/BSSN/BSSN_RHSs.py) Python code, documented in the NRPy+ [BSSN in curvilinear coordinates module](Tutorial-BSSNCurvilinear.ipynb). Thus "
    ]
   },
   {
@@ -28,45 +19,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Step 1: Load SymPy and other needed core NRPy+ modules\n",
     "import sympy as sp\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
     "import grid as gri\n",
+    "from outputC import *\n",
     "\n",
+    "# Step 2: Load BSSN_RHSs and call BSSN_RHSs() to load needed quantities\n",
     "import BSSN.BSSN_RHSs as bssnrhs\n",
     "bssnrhs.BSSN_RHSs()\n",
     "\n",
-    "# Step 2: Set spatial dimension (must be 3 for BSSN)\n",
+    "# Step 3: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
-    "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
-    "\n",
-    "bssnrhs.exp_m4phi\n",
-    "\n",
-    "RbarUU = ixp.zerorank2()\n",
-    "\n",
-    "Rbartrace = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        Rbartrace += bssnrhs.gammabarUU[i][j]*bssnrhs.RbarDD[i][j]\n",
-    "        \n",
-    "        \n",
-    "phi_dBar_times_phi_dBar = sp.sympify(0)\n",
-    "phi_dBarDD_contraction = sp.sympify(0)\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        phi_dBar_times_phi_dBar += bssnrhs.gammabarUU[i][j]*bssnrhs.phi_dBarD[i]*bssnrhs.phi_dBarD[j]\n",
-    "        phi_dBarDD_contraction  += bssnrhs.gammabarUU[i][j]*bssnrhs.phi_dBarDD[i][j]\n",
-    "        \n",
-    "H = sp.sympify(0)\n",
-    "\n"
+    "par.set_parval_from_str(\"grid::DIM\",DIM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we define the Hamiltonian constraint. Eqs. 13 and 14 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf) yield:\n",
+    "$$\n",
+    "H = {\\underbrace {\\textstyle \\frac{2}{3} K^2}_{\\rm Term\\ 1}} - \n",
+    "{\\underbrace {\\textstyle \\bar{A}_{ij} \\bar{A}^{ij}}_{\\rm Term\\ 2}} + \n",
+    "{\\underbrace {\\textstyle e^{-4\\phi} \\left(\\bar{R} - 8 \\bar{D}^i \\phi \\bar{D}_i \\phi - 8 \\bar{D}^2 \\phi\\right)}_{\\rm Term\\ 3}}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Term 1: 2/3 K^2\n",
+    "H = sp.Rational(2,3)*bssnrhs.trK**2\n",
+    "\n",
+    "# Term 2: -A_{ij} A^{ij}\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        H += -bssnrhs.AbarDD[i][j]*bssnrhs.AbarUU[i][j]\n",
+    "\n",
+    "# Term 3a: trace(Rbar)\n",
+    "Rbartrace = sp.sympify(0)\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        Rbartrace += bssnrhs.gammabarUU[i][j]*bssnrhs.RbarDD[i][j]\n",
+    "\n",
+    "# Term 3b: -8 \\bar{\\gamma}^{ij} \\bar{D}_i \\phi \\bar{D}_j \\phi = -8*phi_dBar_times_phi_dBar\n",
+    "# Term 3c: -8 \\bar{\\gamma}^{ij} \\bar{D}_i \\bar{D}_j \\phi      = -8*phi_dBarDD_contraction\n",
+    "phi_dBar_times_phi_dBar = sp.sympify(0) # Term 3b\n",
+    "phi_dBarDD_contraction = sp.sympify(0)  # Term 3c\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        phi_dBar_times_phi_dBar += bssnrhs.gammabarUU[i][j]*bssnrhs.phi_dBarD[i]*bssnrhs.phi_dBarD[j]\n",
+    "        phi_dBarDD_contraction  += bssnrhs.gammabarUU[i][j]*bssnrhs.phi_dBarDD[i][j]\n",
+    "\n",
+    "# Add Term 3:\n",
+    "H += bssnrhs.exp_m4phi*(Rbartrace -8*(phi_dBar_times_phi_dBar + phi_dBarDD_contraction))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathcal{M}^i = e^{-4\\phi} \\left(\\frac{1}{\\bar{\\gamma}} \\hat{D}_j\\left(\\sqrt{\\bar{\\gamma}}\\bar{A^{ij}}\\right) + 6 \\bar{A}^{ij}\\partial_j \\phi - \\frac{2}{3} \\bar{\\gamma}^{ij}\\partial_j K + \\bar{A}^{jk} \\Delta\\Gamma^i_{jk}\\right)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "par.set_parval_from_str(\"outputC::outCverbose\",False) # To prevent absurdly large output files.\n"
+   ]
   }
  ],
  "metadata": {
