Tutorial-BSSNConstraints: Implement most of momentum constraint

--- a/Tutorial-BSSNConstraints.ipynb
+++ b/Tutorial-BSSNConstraints.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we define the Hamiltonian constraint. Eqs. 13 and 14 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf) yield:\n",
+    "Next we define the Hamiltonian constraint. Eq. 13 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf) yields:\n",
     "$$\n",
     "H = {\\underbrace {\\textstyle \\frac{2}{3} K^2}_{\\rm Term\\ 1}} - \n",
     "{\\underbrace {\\textstyle \\bar{A}_{ij} \\bar{A}^{ij}}_{\\rm Term\\ 2}} + \n",
@@ -84,12 +84,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Eq. 14 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf) for the momentum constraint is missing the term $e^{-4\\phi} \\bar{A}^{ik} \\Delta\\Gamma^j_{jk}$, which we include below:\n",
+    "\n",
     "$$\n",
     "\\mathcal{M}^i = e^{-4\\phi} \\left(\n",
     "{\\underbrace {\\textstyle \\frac{1}{\\bar{\\gamma}} \\hat{D}_j\\left(\\sqrt{\\bar{\\gamma}}\\bar{A^{ij}}\\right)}_{\\rm Term\\ 1}} + \n",
     "{\\underbrace {\\textstyle 6 \\bar{A}^{ij}\\partial_j \\phi}_{\\rm Term\\ 2}} - \n",
     "{\\underbrace {\\textstyle \\frac{2}{3} \\bar{\\gamma}^{ij}\\partial_j K}_{\\rm Term\\ 3}} + \n",
-    "{\\underbrace {\\textstyle \\bar{A}^{jk} \\Delta\\Gamma^i_{jk}}_{\\rm Term\\ 4}}\\right)\n",
+    "{\\underbrace {\\textstyle \\bar{A}^{jk} \\Delta\\Gamma^i_{jk} + \\bar{A}^{ik} \\Delta\\Gamma^j_{jk}}_{\\rm Term\\ 4}}\\right)\n",
     "$$"
    ]
   },
@@ -106,8 +108,28 @@
     "    for j in range(DIM):\n",
     "        MU[i] += 6*bssnrhs.AbarUU[i][j]*bssnrhs.phi_dD[j]\n",
     "\n",
+    "# Term 3: -2/3 \\bar{\\gamma}^{ij} K_{,j}\n",
+    "trK_dD = ixp.declarerank1(\"trK_dD\") # Not defined in BSSN_RHSs; only trK_dupD is defined there.\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        MU[i] += -sp.Rational(2,3)*bssnrhs.gammabarUU[i][j]*trK_dD[j]\n",
+    "\n",
+    "# Term 4: \\bar{A}^{jk} \\Delta\\Gamma^i_{jk} + \\bar{A}^{ik} \\Delta\\Gamma^j_{jk}\n",
+    "for i in range(DIM):\n",
+    "    for j in range(DIM):\n",
+    "        for k in range(DIM):\n",
+    "            MU[i] += bssnrhs.AbarUU[j][k]*bssnrhs.DGammaUDD[i][j][k] + bssnrhs.AbarUU[i][k]*bssnrhs.DGammaUDD[j][j][k]\n",
+    "\n",
+    "# Term 1: \\frac{1}{\\bar{\\gamma}} \\hat{D}_j ( \\sqrt{\\bar{\\gamma}}\\bar{A^{ij}} )\n",
     "par.set_parval_from_str(\"outputC::outCverbose\",False) # To prevent absurdly large output files.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
