--- a/Tutorial-BSSNConstraints.ipynb
+++ b/Tutorial-BSSNConstraints.ipynb
@@ -73,7 +73,7 @@
     "# Term 3b: -8 \\bar{\\gamma}^{ij} \\bar{D}_i \\phi \\bar{D}_j \\phi = -8*phi_dBar_times_phi_dBar\n",
     "# Term 3c: -8 \\bar{\\gamma}^{ij} \\bar{D}_i \\bar{D}_j \\phi      = -8*phi_dBarDD_contraction\n",
     "phi_dBar_times_phi_dBar = sp.sympify(0) # Term 3b\n",
-    "phi_dBarDD_contraction = sp.sympify(0)  # Term 3c\n",
+    "phi_dBarDD_contraction  = sp.sympify(0) # Term 3c\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        phi_dBar_times_phi_dBar += bssnrhs.gammabarUU[i][j]*bssnrhs.phi_dBarD[i]*bssnrhs.phi_dBarD[j]\n",
@@ -262,15 +262,15 @@
     "# We already have SymPy expressions for BSSN constraints\n",
     "#         in terms of other SymPy variables. Even if we reset the \n",
     "#         list of NRPy+ gridfunctions, these *SymPy* expressions for\n",
-    "#         BSSN RHS variables *will remain unaffected*. \n",
+    "#         BSSN constraint variables *will remain unaffected*. \n",
     "# \n",
-    "#         Here, we will use the above-defined BSSN RHS expressions\n",
+    "#         Here, we will use the above-defined BSSN constraint expressions\n",
     "#         to validate against the same expressions in the \n",
-    "#         BSSN/BSSN_RHSs.py file, to ensure consistency between \n",
+    "#         BSSN/BSSNConstraints.py file, to ensure consistency between \n",
     "#         this tutorial and the module itself.\n",
     "#\n",
     "# Reset the list of gridfunctions, as registering a gridfunction\n",
-    "#   twice will spawn an error.\n",
+    "#   twice (in the bssnrhs.BSSN_RHSs() call) will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
     "# Call the BSSN_RHSs() function from within the\n",
