--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/InitialData.c\n"
+      "Writing FishboneMoncriefID/src/InitialData.c\n"
      ]
     }
    ],
@@ -311,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/interface.ccl\n"
+      "Writing FishboneMoncriefID/interface.ccl\n"
      ]
     }
    ],
@@ -330,14 +330,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/param.ccl\n"
+      "Writing FishboneMoncriefID/param.ccl\n"
      ]
     }
    ],
@@ -455,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/schedule.ccl\n"
+      "Writing FishboneMoncriefID/schedule.ccl\n"
      ]
     }
    ],
@@ -517,7 +517,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting FishboneMoncriefID/src/make.code.defn\n"
+      "Writing FishboneMoncriefID/src/make.code.defn\n"
      ]
     }
    ],
@@ -525,32 +525,25 @@
     "%%writefile FishboneMoncriefID/src/make.code.defn\n",
     "SRCS = InitialData.c"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
