--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -303,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE.c\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE.c\n"
      ]
     }
    ],
@@ -669,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
+      "Writing GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -988,7 +988,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\n"
+      "Writing GiRaFFE_HO/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\n"
      ]
     }
    ],
@@ -1095,14 +1095,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
      ]
     }
    ],
@@ -1198,14 +1198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/interface.ccl\n"
+      "Writing GiRaFFE_HO/interface.ccl\n"
      ]
     }
    ],
@@ -1288,14 +1288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/param.ccl\n"
+      "Writing GiRaFFE_HO/param.ccl\n"
      ]
     }
    ],
@@ -1373,7 +1373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/schedule.ccl\n"
+      "Writing GiRaFFE_HO/schedule.ccl\n"
      ]
     }
    ],
@@ -1577,7 +1577,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/make.code.defn\n"
+      "Writing GiRaFFE_HO/src/make.code.defn\n"
      ]
     }
    ],
@@ -1586,32 +1586,25 @@
     "SRCS = GiRaFFE.c driver_conserv_to_prims_FFE.C convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C \\\n",
     "       GiRaFFE_HydroBase_conversion.c"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
