--- a/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
+++ b/Tutorial-u0_smallb_Poynting-Cartesian.ipynb
@@ -161,7 +161,8 @@
       "if(R <= Rmax) {\n",
       "   const double tmpnorescale0 = 2*ValenciavU0;\n",
       "   u0 = 1/(alpha*sqrt(-pow(ValenciavU0, 2)*gammaDD00 - pow(ValenciavU1, 2)*gammaDD11 - 2*ValenciavU1*ValenciavU2*gammaDD12 - ValenciavU1*gammaDD01*tmpnorescale0 - pow(ValenciavU2, 2)*gammaDD22 - ValenciavU2*gammaDD02*tmpnorescale0 + 1));\n",
-      "} else {\n",
+      "}\n",
+      " else {\n",
       "   const double tmprescale0 = 1.0/GAMMA_SPEED_LIMIT;\n",
       "   const double tmprescale1 = 2*ValenciavU0;\n",
       "   const double tmprescale2 = sqrt((-tmprescale0 + 1)/(pow(ValenciavU0, 2)*gammaDD00 + pow(ValenciavU1, 2)*gammaDD11 + 2*ValenciavU1*ValenciavU2*gammaDD12 + ValenciavU1*gammaDD01*tmprescale1 + pow(ValenciavU2, 2)*gammaDD22 + ValenciavU2*gammaDD02*tmprescale1));\n",
@@ -169,7 +170,8 @@
       "   ValenciavU1 = ValenciavU1*tmprescale2;\n",
       "   ValenciavU2 = ValenciavU2*tmprescale2;\n",
       "   u0 = 1/(alpha*sqrt(tmprescale0));\n",
-      "}\n"
+      "}\n",
+      "\n"
      ]
     }
    ],
@@ -556,21 +558,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
