--- a/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear.ipynb
@@ -399,7 +399,19 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::AMPL\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::SINHW\n",
+      "Wrote to file \"BSSN/Hamiltonian.h\"\n",
+      "Finished in 127.20998501777649 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "# import BSSN.BSSNConstraints as bssncon\n",
     "# bssncon.BSSNConstraints()\n",
@@ -412,6 +424,162 @@
     "# fin.FD_outputC(\"BSSN/Hamiltonian.h\",lhrh(lhs=gri.gfaccess(\"aux_gfs\",\"H\"),rhs=bssncon.H))\n",
     "# end = time.time()\n",
     "# print(\"Finished in \"+str(end-start)+\" seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now store the initial data to gridfunctions and evaluate the Hamiltonian constraint violation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c\n",
+    "\n",
+    "// Part P1: Import needed header files\n",
+    "#include \"stdio.h\"\n",
+    "#include \"stdlib.h\"\n",
+    "#include \"math.h\"\n",
+    "\n",
+    "// Part P2: Add needed #define's to set data type, the IDX4() macro, and the gridfunctions\n",
+    "// Part P2a: set REAL=double, so that all gridfunctions are set to \n",
+    "#define REAL double\n",
+    "\n",
+    "// Step P3: Set free parameters for the numerical grid\n",
+    "const REAL RMAX    = 10.0;\n",
+    "const REAL t_final =  8.0; /* Final time is set so that at t=t_final, \n",
+    "                            * data at the origin have not been corrupted \n",
+    "                            * by the approximate outer boundary condition */\n",
+    "const REAL CFL_FACTOR = 1.0; // Set the CFL Factor\n",
+    "\n",
+    "// Step P4: Set free parameters for the initial data\n",
+    "const REAL wavespeed = 1.0;\n",
+    "const REAL kk0 = 1.0;\n",
+    "const REAL kk1 = 1.0;\n",
+    "const REAL kk2 = 1.0;\n",
+    "\n",
+    "\n",
+    "// Part P2b: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
+    "//           data in a 1D array. In this case, consecutive values of \"i\" \n",
+    "//           (all other indices held to a fixed value) are consecutive in memory, where \n",
+    "//           consecutive values of \"j\" (fixing all other indices) are separated by \n",
+    "//           Nxx_plus_2NGHOSTS[0] elements in memory. Similarly, consecutive values of\n",
+    "//           \"k\" are separated by Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1] in memory, etc.\n",
+    "#define IDX4(g,i,j,k) \\\n",
+    "( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * ( (k) + Nxx_plus_2NGHOSTS[2] * (g) ) ) )\n",
+    "#define IDX3(i,j,k) ( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * (k) ) )\n",
+    "// Part P2c: Set UUGF and VVGF macros\n",
+    "#define NUM_GFS 2\n",
+    "#define UUGF 0\n",
+    "#define VVGF 1\n",
+    "\n",
+    "#define LOOP_REGION(i0min,i0max, i1min,i1max, i2min,i2max) \\\n",
+    "  for(int i2=i2min;i2<i2max;i2++) for(int i1=i1min;i1<i1max;i1++) for(int i0=i0min;i0<i0max;i0++)\n",
+    "\n",
+    "void xxCart(REAL *xx[3],const int i0,const int i1,const int i2, REAL xCart[3]) {\n",
+    "    REAL xx0 = xx[0][i0];\n",
+    "    REAL xx1 = xx[1][i1];\n",
+    "    REAL xx2 = xx[2][i2];\n",
+    "#include \"xxCart.h\"\n",
+    "}\n",
+    "\n",
+    "// Contains BSSN_ID() for BrillLindquist initial data\n",
+    "#include \"BrillLindquist.h\"\n",
+    "\n",
+    "// Part P4: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
+    "void initial_data(const int Nxx_plus_2NGHOSTS[3],REAL time,REAL *xx[3], REAL *in_gfs) {\n",
+    "#pragma omp parallel for\n",
+    "  LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], 0,Nxx_plus_2NGHOSTS[1], 0,Nxx_plus_2NGHOSTS[2]) {\n",
+    "    REAL xCart[3];\n",
+    "    xxCart(xx, i0,i1,i2, xCart);\n",
+    "    BSSN_ID(xx[0][i0],xx[1][i1],xx[2][i2],xCart[0],xCart[1],xCart[2],\n",
+    "            &in_gfs[IDX4(HDD00GF,idx)],&in_gfs[IDX4(HDD01GF,idx)],&in_gfs[IDX4(HDD02GF,idx)],\n",
+    "            &in_gfs[IDX4(HDD11GF,idx)],&in_gfs[IDX4(HDD12GF,idx)],&in_gfs[IDX4(HDD22GF,idx)],\n",
+    "            &in_gfs[IDX4(ADD00GF,idx)],&in_gfs[IDX4(ADD01GF,idx)],&in_gfs[IDX4(ADD02GF,idx)],\n",
+    "            &in_gfs[IDX4(ADD11GF,idx)],&in_gfs[IDX4(ADD12GF,idx)],&in_gfs[IDX4(ADD22GF,idx)],\n",
+    "            &in_gfs[IDX4(LAMBDAU0GF,idx)],&in_gfs[IDX4(LAMBDAU1GF,idx)],&in_gfs[IDX4(LAMBDAU2GF,idx)],\n",
+    "            &in_gfs[IDX4(VETU0GF,idx)],&in_gfs[IDX4(VETU1GF,idx)],&in_gfs[IDX4(VETU2GF,idx)],\n",
+    "            &in_gfs[IDX4(BETU0GF,idx)],&in_gfs[IDX4(BETU1GF,idx)],&in_gfs[IDX4(BETU2GF,idx)],\n",
+    "            &in_gfs[IDX4(ALPHAGF,idx)],&in_gfs[IDX4(CFGF,idx)]);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "// Part P5: Declare the function to evaluate the scalar wave RHSs\n",
+    "void rhs_eval(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3], const REAL *in_gfs,REAL *rhs_gfs) {\n",
+    "#include \"ScalarWaveCurvilinear_RHSs.h\"\n",
+    "}\n",
+    "\n",
+    "// main() function:\n",
+    "// Step 0: Read command-line input, set up grid structure, allocate memory for gridfunctions, set up coordinates\n",
+    "// Step 1: Set up scalar wave initial data\n",
+    "// Step 2: Evolve scalar wave initial data forward in time using Method of Lines with RK4 algorithm,\n",
+    "//         applying quadratic extrapolation outer boundary conditions.\n",
+    "// Step 3: Output relative error between numerical and exact solution.\n",
+    "// Step 4: Free all allocated memory\n",
+    "int main(int argc, const char *argv[]) {\n",
+    "\n",
+    "  // Step 0a: Read command-line input, error out if nonconformant\n",
+    "  if(argc != 4 || atoi(argv[1]) < NGHOSTS) {\n",
+    "      printf(\"Error: Expected one command-line argument: ./ScalarWaveCurvilinear_Playground Nx0 Nx1 Nx2,\\n\");\n",
+    "      printf(\"where Nx[0,1,2] is the number of grid points in the 0, 1, and 2 directions.\\n\");\n",
+    "      printf(\"Nx[] MUST BE larger than NGHOSTS (= %d)\\n\",NGHOSTS);\n",
+    "      exit(1);\n",
+    "  }\n",
+    "  // Step 0b: Set up numerical grid structure, first in space...\n",
+    "  const int Nx0 = atoi(argv[1]);\n",
+    "  const int Nx1 = atoi(argv[2]);\n",
+    "  const int Nx2 = atoi(argv[3]);\n",
+    "  if(Nx0%2 != 0 || Nx1%2 != 0 || Nx2%2 != 0) {\n",
+    "    printf(\"Error: Cannot guarantee a proper cell-centered grid if number of grid cells not set to even number.\\n\");\n",
+    "    printf(\"       For example, in case of angular directions, proper symmetry zones will not exist.\\n\");\n",
+    "    exit(1);\n",
+    "  }\n",
+    "  const int Nxx[3] = { Nx0, Nx1, Nx2 };\n",
+    "  const int Nxx_plus_2NGHOSTS[3] = { Nxx[0]+2*NGHOSTS, Nxx[1]+2*NGHOSTS, Nxx[2]+2*NGHOSTS };\n",
+    "  const int Nxx_plus_2NGHOSTS_tot = Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2];\n",
+    "#include \"xxminmax.h\"\n",
+    "\n",
+    "  // Step 0c: Allocate memory for gridfunctions\n",
+    "  REAL *evol_gfs    = (REAL *)malloc(sizeof(REAL) * NUM_GFS * Nxx_plus_2NGHOSTS_tot);\n",
+    "  \n",
+    "  // Step 0d: Set up space and time coordinates\n",
+    "  // Step 0d.i: Set \\Delta x^i on uniform grids.\n",
+    "  REAL dxx[3];\n",
+    "  for(int i=0;i<3;i++) dxx[i] = (xxmax[i] - xxmin[i]) / ((REAL)Nxx[i]);\n",
+    "\n",
+    "  // Step 0d.ii: Set up uniform coordinate grids\n",
+    "  REAL *xx[3];\n",
+    "  for(int i=0;i<3;i++) {\n",
+    "    xx[i] = (REAL *)malloc(sizeof(REAL)*Nxx_plus_2NGHOSTS[i]);\n",
+    "    for(int j=0;j<Nxx_plus_2NGHOSTS[i];j++) {\n",
+    "      xx[i][j] = xxmin[i] + ((REAL)(j-NGHOSTS) + (1.0/2.0))*dxx[i]; // Cell-centered grid.\n",
+    "    }\n",
+    "  }\n",
+    "  \n",
+    "  // Step 1: Set up initial data to be exact solution at time=0:\n",
+    "  exact_solution(Nxx_plus_2NGHOSTS, 0.0, xx, evol_gfs);\n",
+    "\n",
+    "  /* Step 3: Output relative error between numerical and exact solution, */\n",
+    "  const int i0MIN=NGHOSTS; // In spherical, r=Delta r/2.\n",
+    "  const int i1mid=Nxx_plus_2NGHOSTS[1]/2;\n",
+    "  const int i2mid=Nxx_plus_2NGHOSTS[2]/2;\n",
+    "  exact_solution(Nxx_plus_2NGHOSTS,(n+1)*dt, xx, k1_gfs);\n",
+    "  const double exact     = (double)k1_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
+    "  const double numerical = (double)evol_gfs[IDX4(0,i0MIN,i1mid,i2mid)];\n",
+    "  const double relative_error = fabs((exact-numerical)/exact);\n",
+    "  printf(\"%e %e || %e %e %e: %e %e\\n\",(double)((n+1)*dt), log10(relative_error),\n",
+    "         (double)xx[0][i0MIN],(double)xx[1][i1mid],(double)xx[2][i2mid], numerical,exact);\n",
+    "  \n",
+    "  // Step 4: Free all allocated memory\n",
+    "  free(evol_gfs);\n",
+    "  for(int i=0;i<3;i++) free(xx[i]);\n",
+    "  return 0;\n",
+    "}"
    ]
   }
  ],
