outputC API update: Move most parameters to a simple comma-separated parameter string

--- a/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
+++ b/Tutorial-ETK_thorn-FishboneMoncriefID.ipynb
@@ -45,9 +45,6 @@
     "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
-    "# Force outputC::outCverbose to be false for this module to avoid gigantic C files\n",
-    "# filled with the non-CSE expressions for the Weyl scalars.\n",
-    "par.set_parval_from_str(\"outputC::outCverbose\",False)\n",
     "\n",
     "# Step 1c: Call the FishboneMoncriefID() function from within the\n",
     "#          FishboneMoncriefID/FishboneMoncriefID.py module.\n",
@@ -86,7 +83,9 @@
     "                     lhrh(lhs=gri.gfaccess(\"out_gfs\",\"KDD12\"),rhs=fmid.IDKDD[1][2]),\\\n",
     "                     lhrh(lhs=gri.gfaccess(\"out_gfs\",\"KDD22\"),rhs=fmid.IDKDD[2][2]),\\\n",
     "                     ]\n",
-    "KerrSchild_CcodeKernel = fin.FD_outputC(\"returnstring\",KerrSchild_to_print)\n",
+    "# Force outCverbose=False for this module to avoid gigantic C files\n",
+    "# filled with the non-CSE expressions for the Weyl scalars.\n",
+    "KerrSchild_CcodeKernel = fin.FD_outputC(\"returnstring\",KerrSchild_to_print,params=\"outCverbose=False\")\n",
     "\n",
     "# -={ GRMHD quantities: Generate C code from expressions and output to file }=-\n",
     "FMdisk_GRHD_rho0_to_print = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"rho0\"),rhs=fmid.rho0)]\n",
