--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,6 @@
     "\n",
     "!mkdir WeylScal4NRPy     2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists.\n",
     "!mkdir WeylScal4NRPy/src 2>/dev/null # 2>/dev/null: Don't throw an error or warning if the directory already exists.\n",
-    "# par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
     "\n",
     "scalars_lhrh = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r),\\\n",
     "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=weyl.psi4i)]\n",
@@ -98,7 +97,7 @@
     "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ2\"),rhs=invar.curvJ2),\\\n",
     "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ3\"),rhs=invar.curvJ3),\\\n",
     "               lhrh(lhs=gri.gfaccess(\"out_gfs\",\"curvJ4\"),rhs=invar.curvJ4),]\n",
-    "invars_CcodeKernel = fin.FD_outputC(\"returnstring\",invars_lhrh)\n",
+    "invars_CcodeKernel = fin.FD_outputC(\"returnstring\",invars_lhrh,params=\"outCverbose=False\")\n",
     "\n",
     "invars_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"2\",\"2\",\"2\"],[\"cctk_lsh[2]-2\",\"cctk_lsh[1]-2\",\"cctk_lsh[0]-2\"],\\\n",
     "                          [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",invars_CcodeKernel)\n",
@@ -120,17 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting WeylScal4NRPy/src/WeylScal4NRPy.c\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile WeylScal4NRPy/src/WeylScal4NRPy.c\n",
     "\n",
@@ -232,17 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting WeylScal4NRPy/interface.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile WeylScal4NRPy/interface.ccl\n",
     "\n",
@@ -291,17 +274,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting WeylScal4NRPy/param.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile WeylScal4NRPy/param.ccl\n",
     "\n",
@@ -335,17 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting WeylScal4NRPy/schedule.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile WeylScal4NRPy/schedule.ccl\n",
     "\n",
@@ -414,17 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting WeylScal4NRPy/src/make.code.defn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile WeylScal4NRPy/src/make.code.defn\n",
     "\n",
@@ -434,21 +393,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
