--- a/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
+++ b/Tutorial-ETK_thorn-u0_smallb_Poynting.ipynb
@@ -89,14 +89,11 @@
     }
    ],
    "source": [
-    "# Step 1c: Force outputC::outCverbose to be false for this module to avoid gigantic C files\n",
-    "#          filled with the non-CSE expressions for the Weyl scalars.\n",
-    "par.set_parval_from_str(\"outputC::outCverbose\",False) # To prevent absurdly large output files.\n",
-    "# Step 1d: Set spatial dimension (must be 3 for BSSN)\n",
+    "# Step 1c: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
-    "# Step 1e: declare the additional gridfunctions (i.e., functions whose values are declared \n",
+    "# Step 1d: declare the additional gridfunctions (i.e., functions whose values are declared \n",
     "#          at every grid point, either inside or outside of our SymPy expressions) needed\n",
     "#         for this thorn\n",
     "\n",
@@ -143,7 +140,10 @@
     "         [gri.gfaccess(\"\",\"smallb4U0\"),gri.gfaccess(\"\",\"smallb4U1\"),gri.gfaccess(\"\",\"smallb4U2\"),gri.gfaccess(\"\",\"smallb4U3\"),\n",
     "          gri.gfaccess(\"\",\"smallb2\"),\n",
     "          gri.gfaccess(\"\",\"PoynSU0\"),gri.gfaccess(\"\",\"PoynSU1\"),gri.gfaccess(\"\",\"PoynSU2\")],\n",
-    "       filename=\"sbPoynETNRPy/src/smallb4U_smallb2_PoynSU.h\")"
+    "       filename=\"sbPoynETNRPy/src/smallb4U_smallb2_PoynSU.h\",\n",
+    "       params=\"outCverbose=False\") # <- Force outCverbose=False for this \n",
+    "                                   #    module to avoid gigantic C file filled with the\n",
+    "                                   #    non-CSE expressions for the Weyl scalars."
    ]
   },
   {
@@ -452,21 +452,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
