--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -276,7 +276,8 @@
       " */\n",
       "{\n",
       "   con = hDD00*hUU00 + 2*hDD01*hUU01 + 2*hDD02*hUU02 + hDD11*hUU11 + 2*hDD12*hUU12 + hDD22*hUU22;\n",
-      "}\n"
+      "}\n",
+      "\n"
      ]
     }
    ],
@@ -302,6 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['SIMD_enable', 'True']\n",
       "/*\n",
       " *  Original SymPy expression:\n",
       " *  \"con = hDD00*hUU00 + 2*hDD01*hUU01 + 2*hDD02*hUU02 + hDD11*hUU11 + 2*hDD12*hUU12 + hDD22*hUU22\"\n",
@@ -311,16 +313,13 @@
       "   const REAL_SIMD_ARRAY  = Set1SIMD(tmp_Integer_2);\n",
       "\n",
       "   con = FusedMulAddSIMD(hUU02, MulSIMD(hDD02, _Integer_2), FusedMulAddSIMD(hUU01, MulSIMD(hDD01, _Integer_2), FusedMulAddSIMD(hDD22, hUU22, FusedMulAddSIMD(hDD11, hUU11, FusedMulAddSIMD(hUU12, MulSIMD(hDD12, _Integer_2), MulSIMD(hDD00, hUU00))))));\n",
-      "}\n"
+      "}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "par.set_parval_from_str(\"outputC::SIMD_enable\",True)\n",
-    "outputC(con,\"con\")\n",
-    "\n",
-    "# Restor SIMD_enable to be False, to make it easier to read the output in the Exercise below.\n",
-    "par.set_parval_from_str(\"outputC::SIMD_enable\",False)"
+    "outputC(con,\"con\",params=\"SIMD_enable=True\")"
    ]
   },
   {
@@ -366,21 +365,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
