--- a/Tutorial-MaxwellCartesian.ipynb
+++ b/Tutorial-MaxwellCartesian.ipynb
@@ -19,11 +19,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Step P1: Import needed Python modules\n",
     "import NRPy_param_funcs as par\n",
     "import indexedexp as ixp\n",
     "import grid as gri\n",
     "import finite_difference as fin\n",
     "from outputC import *\n",
+    "\n",
+    "#Step P2: Name this Python module\n",
+    "thismodule = \"MaxwellCartesian\"\n",
     "\n",
     "#Step 0: Set the spatial dimension parameter to 3.\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
@@ -493,8 +497,6 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter outputC::amp\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter outputC::lam\n",
       "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
       "Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
@@ -547,8 +549,8 @@
      "output_type": "stream",
      "text": [
       "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter outputC::amp\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter outputC::lam\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Maxwell.MaxwellCartesian_ID::amp\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter Maxwell.MaxwellCartesian_ID::lam\n",
       "^^^ Ignore the minor warning above. ^^^\n",
       "\n",
       "Consistency check between MaxwellCartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
@@ -588,21 +590,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
