--- a/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
+++ b/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
@@ -96,14 +96,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1a: Force outputC::outCverbose to be false for this module to avoid gigantic C files\n",
-    "#          filled with the non-CSE expressions for the Weyl scalars.\n",
-    "par.set_parval_from_str(\"outputC::outCverbose\",False) # To prevent absurdly large output files.\n",
-    "# Step 1b: Set spatial dimension (must be 3 for BSSN)\n",
+    "# Step 1a: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
-    "# Step 1c: declare the additional gridfunctions (i.e., functions whose values are declared \n",
+    "# Step 1b: declare the additional gridfunctions (i.e., functions whose values are declared \n",
     "#          at every grid point, either inside or outside of our SymPy expressions) needed\n",
     "#         for this thorn:\n",
     "#           * the physical metric $\\gamma_{ij}$, \n",
@@ -858,21 +855,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
