Update GiRaFFE HO to support new outputC() interface

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -41,7 +41,6 @@
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
     "par.set_parval_from_str(\"grid::GridFuncMemAccess\",\"ETK\")\n",
-    "par.set_parval_from_str(\"outputC::outCverbose\",False) \n",
     "\n",
     "# Step 1: Set the finite differencing order to 4.\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 4)\n",
@@ -81,9 +80,9 @@
     "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi6Phi_rhs\"),rhs=gho.psi6Phi_rhs),\\\n",
     "                    ]\n",
     "\n",
-    "Prereqs_CKernel = fin.FD_outputC(\"returnstring\",Prereqs_to_print)\n",
+    "Prereqs_CKernel = fin.FD_outputC(\"returnstring\",Prereqs_to_print,params=\"outCverbose=False\")\n",
     "Prereqs_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + Prereqs_CKernel\n",
-    "Conservs_CKernel = fin.FD_outputC(\"returnstring\",Conservs_to_print)\n",
+    "Conservs_CKernel = fin.FD_outputC(\"returnstring\",Conservs_to_print,params=\"outCverbose=False\")\n",
     "Conservs_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + Conservs_CKernel\n",
     "\n",
     "Prereqs_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\\\n",
@@ -173,31 +172,36 @@
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_10.h\",[\\\n",
     "                                                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                         lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 8)\n",
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_8.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 6)\n",
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_6.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 4)\n",
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_4.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n",
     "AD_ddnD = ixp.declarerank2(\"AD_ddnD\",\"nosym\")\n",
     "for i in range(DIM):\n",
@@ -212,7 +216,8 @@
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x0D.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "AD_dupD = ixp.declarerank2(\"AD_dupD\",\"nosym\")\n",
     "for i in range(DIM):\n",
     "    BU[i] = 0\n",
@@ -226,7 +231,8 @@
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x0U.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n",
     "for i in range(DIM):\n",
     "    BU[i] = 0\n",
@@ -240,7 +246,8 @@
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x1D.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "for i in range(DIM):\n",
     "    BU[i] = 0\n",
     "    for j in range(DIM):\n",
@@ -253,7 +260,8 @@
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x1U.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n",
     "for i in range(DIM):\n",
     "    BU[i] = 0\n",
@@ -267,7 +275,8 @@
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x2D.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "for i in range(DIM):\n",
     "    BU[i] = 0\n",
     "    for j in range(DIM):\n",
@@ -280,7 +289,8 @@
     "BU_to_print = fin.FD_outputC(\"GiRaFFE_HO/src/B_from_A_2x2U.h\",[\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU0\"),rhs=BU[0]),\\\n",
     "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU1\"),rhs=BU[1]),\\\n",
-    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])])\n",
+    "                                                        lhrh(lhs=gri.gfaccess(\"out_gfs\",\"BU2\"),rhs=BU[2])],\n",
+    "                             params=\"outCverbose=False\")\n",
     "\n"
    ]
   },
@@ -310,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE.c\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE.c\n"
      ]
     }
    ],
@@ -675,7 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
+      "Writing GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -986,7 +996,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\n"
+      "Writing GiRaFFE_HO/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\n"
      ]
     }
    ],
@@ -1093,14 +1103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE_headers.h\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE_headers.h\n"
      ]
     }
    ],
@@ -1201,14 +1211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/inlined_functions.C\n"
+      "Writing GiRaFFE_HO/src/inlined_functions.C\n"
      ]
     }
    ],
@@ -1402,7 +1412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/compute_conservatives_FFE.C\n"
+      "Writing GiRaFFE_HO/src/compute_conservatives_FFE.C\n"
      ]
     }
    ],
@@ -1487,7 +1497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
      ]
     }
    ],
@@ -1590,7 +1600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/interface.ccl\n"
+      "Writing GiRaFFE_HO/interface.ccl\n"
      ]
     }
    ],
@@ -1689,7 +1699,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/param.ccl\n"
+      "Writing GiRaFFE_HO/param.ccl\n"
      ]
     }
    ],
@@ -1772,7 +1782,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/schedule.ccl\n"
+      "Writing GiRaFFE_HO/schedule.ccl\n"
      ]
     }
    ],
@@ -1969,14 +1979,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/make.code.defn\n"
+      "Writing GiRaFFE_HO/src/make.code.defn\n"
      ]
     }
    ],
@@ -1996,21 +2006,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
